[tool.poetry]
name = "cuda-jax"
version = "0.1.0"
description = "CUDA ML Environment"
authors = ["Jonathan Hayase <jhayase@cs.uw.edu>"]

[tool.poetry.dependencies]
python = "~3.10"

# Non-ML
tqdm = "^4.59.0"
python-dotenv = {extras = ["cli"], version = "^0.16.0"}
Cython = "^0.29.24"
tabulate = "^0.8.10"
joblib = "^1.1.0"

# Classic Python Libraries
numpy = "1.21.4"
scipy = "^1.6.2"
pandas = "^1.2.3"
scikit-learn = "^1.1"
seaborn = "^0.11.2"
statsmodels = "^0.13.2"
sympy = "^1.10.1"
ftfy = "^6.1.1"

# Framework-agnostic ML
wandb = "^0.12.21"
albumentations = "^1.2.0"
cleverhans = "^4.0.0"
onnx = "^1.12.0"
shapecheck = "^0.0.2"
einops = "^0.4.1"

# Slurm
submitit = "^1.4.2"
pyslurm = {git="https://github.com/PythonNut/pyslurm.git", rev="fix-build"}

# PyTorch
torch = "^1.12.0"
torchvision = "^0.13.0"
functorch = "^0.2.0"
webdataset = "^0.2.5"
onnx2pytorch = "^0.4.1"
vit-pytorch = "^0.35.8"
torchdynamo = "^1.12.0"
pytorch-accelerated = "^0.1.35"
surgeon-pytorch = "^0.0.4"
torch-fidelity = "^0.3.0"
pytorch-lightning = "^1.7.1"
torchmetrics = "^0.9.3"
kornia = "^0.6.6"

# TensorFlow
tensorflow = "^2.9.1"
tensorflow-datasets = "^4.6.0"
tensorboard = "^2.9.1"
tensorboardX = "^2.5.1"

# JAX
jax = "^0.3.8"
jaxlib = {url ="https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.3.15+cuda11.cudnn82-cp310-none-manylinux2014_x86_64.whl"}
flax = "^0.5.2"
dm-haiku = "^0.0.6"
# elegy = "^0.8.6"
equinox = "^0.5.3"
# neural-tangents = {git = "https://github.com/google/neural-tangents", rev = "main"}
neural-tangents = "^0.5.0"
optax = "^0.1.2"
jaxopt = "^0.4.2"
diffrax = "^0.1.2"
tree-math = "^0.1.0"
dm-tree = "^0.1.7"
jax-metrics = "^0.1.2"
jax-models = "^0.0.5"
jax-loss = "^0.0.1"
jax-cosmo = "^0.1rc9"
augmax = "^0.2.2"
jax2torch = "^0.0.7"

# Hugging Face
diffusers = {git="https://github.com/huggingface/diffusers.git", rev="main"}
transformers = "^4.21.1"

# Optimal Transport
POT = "^0.8.2"
ott-jax = "^0.2.7"

# Math Optimization and SAT
ortools = "^9.3.10497"
python-sat = "*"
cvxpy = "^1.2.1"
cvxopt = "^1.3.0"
gurobipy = "^9.5.1"
quadprog = "^0.1.11"
Mosek = "^9.3.20"
z3-solver = "^4.9.1.0"
py-aiger = "^6.1.23"

# Data formats
imageio = "^2.15.0"
dill = {git="https://github.com/uqfoundation/dill.git", rev="master"}
cloudpickle = "^2.0.0"
tables = "^3.7.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0"
jupyter = "^1.0"
jupytext = "^1.13.8"
python-lsp-server = "^1.4.1"
python-lsp-black = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
